--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="text/javascript" src="main.js" />
+  <link rel="stylesheet" type="text/css" href="main.css">
   <title>Amogus</title>
 </head>
 <body>
 
+  <canvas id="game-canvas" width="480" height="320"></canvas>
+
 </body>
+<script type="text/javascript" src="main.js"></script>
 </html>
