--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <span id="score">Score: </span><br>
+  <span id="highscore">Highcore: </span>
   <canvas id="game-canvas" width="480" height="320"></canvas>
 
 </body>
