rollback and fixes

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <title>Amogus</title>
+  <title>Bonk</title>
 </head>
 <body>
   <span id="score">Score: </span><br>
   <span id="highscore">Highcore: </span>
-  <canvas id="game-canvas" width="1000" height="600"></canvas>
+  <canvas id="game-canvas" width="480" height="320"></canvas>
 </body>
 <script type="text/javascript" src="main.js"></script>
 </html>
